[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/autoload/touch_screen.gd" type="Script" id=1]
[ext_resource path="res://src/menu/round_button.gd" type="Script" id=3]
[ext_resource path="res://src/menu/button_modulate.gd" type="Script" id=4]
[ext_resource path="res://media/font/mini-wakuwaku.otf" type="DynamicFontData" id=5]
[ext_resource path="res://src/class/shape/Circle.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 2.12132, 2.12132, 3, 0, 2.12132, -2.12132, 353.553, -353.553, 461.94, -191.342, 500, 0, 461.94, 191.342, 353.553, 353.553 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( -2.12132, 2.12132, -1.31134e-07, 3, 2.12132, 2.12132, 353.553, 353.553, 191.342, 461.94, -2.18557e-05, 500, -191.342, 461.94, -353.553, 353.553 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( -2.12132, -2.12132, -3, -2.62268e-07, -2.12132, 2.12132, -353.553, 353.553, -461.94, 191.342, -500, -4.37114e-05, -461.94, -191.342, -353.553, -353.553 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 2.12132, -2.12132, 3.57746e-08, -3, -2.12132, -2.12132, -353.553, -353.553, -191.342, -461.94, 5.96244e-06, -500, 191.342, -461.94, 353.553, -353.553 )

[sub_resource type="CircleShape2D" id=3]
radius = 75.0

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=4]
radius = 75.0

[sub_resource type="CircleShape2D" id=5]
radius = 15.0

[node name="TouchScreen" type="CanvasLayer"]
pause_mode = 2
layer = 19
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="HBoxLeft" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="DPad" type="Control" parent="Control/HBoxLeft"]
margin_top = 380.0
margin_right = 300.0
margin_bottom = 680.0
rect_min_size = Vector2( 300, 300 )
size_flags_vertical = 8

[node name="Buttons" type="Control" parent="Control/HBoxLeft/DPad"]
margin_left = 150.0
margin_top = 150.0
margin_right = 150.0
margin_bottom = 150.0

[node name="0" type="TouchScreenButton" parent="Control/HBoxLeft/DPad/Buttons"]
shape = SubResource( 7 )
shape_centered = false
action = "ui_right"
script = ExtResource( 3 )
radius = 500.0
poly_path = NodePath("Polygon2D")
inner_radius = 140.0
inner_offset = 6.0

[node name="Polygon2D" type="Polygon2D" parent="Control/HBoxLeft/DPad/Buttons/0"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 6, 0 )
polygon = PoolVector2Array( 2.12132, 2.12132, 3, 0, 2.12132, -2.12132, 98.9949, -98.9949, 129.343, -53.5757, 140, 0, 129.343, 53.5757, 98.9949, 98.9949 )
script = ExtResource( 4 )
button_path = NodePath("..")
idle_color = Color( 1, 1, 1, 0.501961 )

[node name="1" type="TouchScreenButton" parent="Control/HBoxLeft/DPad/Buttons"]
shape = SubResource( 8 )
shape_centered = false
action = "ui_down"
script = ExtResource( 3 )
radius = 500.0
angle = 90.0
poly_path = NodePath("Polygon2D")
inner_radius = 140.0
inner_offset = 6.0

[node name="Polygon2D" type="Polygon2D" parent="Control/HBoxLeft/DPad/Buttons/1"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( -2.62268e-07, 6 )
polygon = PoolVector2Array( -2.12132, 2.12132, -1.31134e-07, 3, 2.12132, 2.12132, 98.9949, 98.9949, 53.5757, 129.343, -6.11959e-06, 140, -53.5757, 129.343, -98.9949, 98.9949 )
script = ExtResource( 4 )
button_path = NodePath("..")
idle_color = Color( 1, 1, 1, 0.501961 )

[node name="2" type="TouchScreenButton" parent="Control/HBoxLeft/DPad/Buttons"]
shape = SubResource( 9 )
shape_centered = false
action = "ui_left"
script = ExtResource( 3 )
radius = 500.0
angle = 180.0
poly_path = NodePath("Polygon2D")
inner_radius = 140.0
inner_offset = 6.0

[node name="Polygon2D" type="Polygon2D" parent="Control/HBoxLeft/DPad/Buttons/2"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( -6, -5.24537e-07 )
polygon = PoolVector2Array( -2.12132, -2.12132, -3, -2.62268e-07, -2.12132, 2.12132, -98.9949, 98.9949, -129.343, 53.5757, -140, -1.22392e-05, -129.343, -53.5757, -98.995, -98.9949 )
script = ExtResource( 4 )
button_path = NodePath("..")
idle_color = Color( 1, 1, 1, 0.501961 )

[node name="3" type="TouchScreenButton" parent="Control/HBoxLeft/DPad/Buttons"]
shape = SubResource( 10 )
shape_centered = false
action = "ui_up"
script = ExtResource( 3 )
radius = 500.0
angle = 270.0
poly_path = NodePath("Polygon2D")
inner_radius = 140.0
inner_offset = 6.0

[node name="Polygon2D" type="Polygon2D" parent="Control/HBoxLeft/DPad/Buttons/3"]
modulate = Color( 1, 1, 1, 0.5 )
position = Vector2( 7.15493e-08, -6 )
polygon = PoolVector2Array( 2.12132, -2.12132, 3.57746e-08, -3, -2.12132, -2.12132, -98.995, -98.9949, -53.5757, -129.343, 1.66948e-06, -140, 53.5757, -129.343, 98.9949, -98.995 )
script = ExtResource( 4 )
button_path = NodePath("..")
idle_color = Color( 1, 1, 1, 0.501961 )

[node name="HBoxRight" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="C" type="CenterContainer" parent="Control/HBoxRight"]
margin_left = 940.0
margin_top = 530.0
margin_right = 1090.0
margin_bottom = 680.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 8

[node name="Control" type="Control" parent="Control/HBoxRight/C"]
margin_left = 75.0
margin_top = 75.0
margin_right = 75.0
margin_bottom = 75.0

[node name="Button" type="TouchScreenButton" parent="Control/HBoxRight/C/Control"]
physics_interpolation_mode = 1
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 3 )
shape_centered = false
action = "ui_no"
visibility_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
button_path = NodePath(".")
color_path = NodePath("../Poly")
idle_color = Color( 1, 1, 1, 0.156863 )

[node name="Poly" type="Polygon2D" parent="Control/HBoxRight/C/Control"]
modulate = Color( 1, 1, 1, 0.156863 )
polygon = PoolVector2Array( 70, 0, 64.6716, 26.7878, 49.4975, 49.4975, 26.7878, 64.6716, -3.0598e-06, 70, -26.7878, 64.6716, -49.4975, 49.4975, -64.6716, 26.7878, -70, -6.11959e-06, -64.6716, -26.7878, -49.4975, -49.4975, -26.7878, -64.6716, 8.34742e-07, -70, 26.7879, -64.6716, 49.4975, -49.4975, 64.6716, -26.7878 )
script = ExtResource( 8 )
is_baked = false
radius = 70.0

[node name="Key" type="Label" parent="Control/HBoxRight/C/Control"]
modulate = Color( 1, 0, 0.301961, 1 )
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 6 )
text = "c"
align = 1
valign = 1
uppercase = true

[node name="X" type="CenterContainer" parent="Control/HBoxRight"]
margin_left = 1090.0
margin_top = 530.0
margin_right = 1240.0
margin_bottom = 680.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 8

[node name="Control" type="Control" parent="Control/HBoxRight/X"]
margin_left = 75.0
margin_top = 75.0
margin_right = 75.0
margin_bottom = 75.0

[node name="Button" type="TouchScreenButton" parent="Control/HBoxRight/X/Control"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 4 )
shape_centered = false
action = "ui_yes"
visibility_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
button_path = NodePath(".")
color_path = NodePath("../Poly")
idle_color = Color( 1, 1, 1, 0.156863 )

[node name="Poly" type="Polygon2D" parent="Control/HBoxRight/X/Control"]
modulate = Color( 1, 1, 1, 0.156863 )
polygon = PoolVector2Array( 70, 0, 64.6716, 26.7878, 49.4975, 49.4975, 26.7878, 64.6716, -3.0598e-06, 70, -26.7878, 64.6716, -49.4975, 49.4975, -64.6716, 26.7878, -70, -6.11959e-06, -64.6716, -26.7878, -49.4975, -49.4975, -26.7878, -64.6716, 8.34742e-07, -70, 26.7879, -64.6716, 49.4975, -49.4975, 64.6716, -26.7878 )
script = ExtResource( 8 )
is_baked = false
radius = 70.0

[node name="Key" type="Label" parent="Control/HBoxRight/X/Control"]
modulate = Color( 0, 0.894118, 0.211765, 1 )
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 6 )
text = "x"
align = 1
valign = 1
uppercase = true

[node name="HBoxTop" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2

[node name="Pause" type="CenterContainer" parent="Control/HBoxTop"]
margin_left = 1090.0
margin_right = 1240.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 0

[node name="Control" type="Control" parent="Control/HBoxTop/Pause"]
margin_left = 75.0
margin_top = 75.0
margin_right = 75.0
margin_bottom = 75.0

[node name="Button" type="TouchScreenButton" parent="Control/HBoxTop/Pause/Control"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 5 )
shape_centered = false
action = "ui_pause"
visibility_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}
button_path = NodePath(".")
color_path = NodePath("../Poly")
idle_color = Color( 1, 1, 1, 0.156863 )

[node name="Poly" type="Polygon2D" parent="Control/HBoxTop/Pause/Control"]
modulate = Color( 1, 1, 1, 0.156863 )
polygon = PoolVector2Array( 70, 0, 64.6716, 26.7878, 49.4975, 49.4975, 26.7878, 64.6716, -3.0598e-06, 70, -26.7878, 64.6716, -49.4975, 49.4975, -64.6716, 26.7878, -70, -6.11959e-06, -64.6716, -26.7878, -49.4975, -49.4975, -26.7878, -64.6716, 8.34742e-07, -70, 26.7879, -64.6716, 49.4975, -49.4975, 64.6716, -26.7878 )
script = ExtResource( 8 )
is_baked = false
radius = 70.0

[node name="Control" type="Control" parent="Control/HBoxTop/Pause/Control"]
rect_scale = Vector2( 7, 7 )

[node name="ColorRect" type="ColorRect" parent="Control/HBoxTop/Pause/Control/Control"]
margin_left = -5.0
margin_top = -6.0
margin_right = -1.0
margin_bottom = 6.0

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxTop/Pause/Control/Control"]
margin_left = 1.0
margin_top = -6.0
margin_right = 5.0
margin_bottom = 6.0
